--- a/style.css
+++ b/style.css
@@ -1,19 +1,42 @@
-.container {
+body{
+    margin: 0px;
+}
+nav{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: red;
-    border: 4px solid rgb(195, 203, 223);
-    width: 400px;
-    height: 300px;
-  }
-  
-  .box {
-    background:black;
-    font-weight: bold;
-    text-align: center;
-    width: 100px;
-    height: 100px;
-  }
-  
+    justify-content: space-between;
+    background-color: peachpuff;
+}
 
+div{
+    background-color: white;
+    color: red;
+    margin-top: 5px;
+    width: 120px;
+    height: 40px;
+    border: 2px solid;
+    text-align: center;
+    font-size: 2.2rem;
+    font-weight: bolder;
+
+}
+
+ul{
+    list-style-type: none;
+
+}
+
+ul > li{
+    display: inline;
+    text-align: center;
+    border: 2px solid;
+    margin: 10px;
+    padding: 10px;
+    width: 120px;
+    height: 100px;
+    background-color: white;
+}
+
+a{
+    color: blue;
+    font-size: 20px;
+}
