--- a/style.css
+++ b/style.css
@@ -1,42 +1,46 @@
-body{
-    margin: 0px;
-}
-nav{
-    display: flex;
-    justify-content: space-between;
-    background-color: peachpuff;
-}
+@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
-div{
-    background-color: white;
-    color: red;
-    margin-top: 5px;
-    width: 120px;
-    height: 40px;
-    border: 2px solid;
-    text-align: center;
-    font-size: 2.2rem;
-    font-weight: bolder;
-
+body {
+  margin: 0;
+  background: #eee;
+  font-family: Besley, serif;
 }
 
-ul{
-    list-style-type: none;
-
+.header {
+  background: white;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
 
-ul > li{
-    display: inline;
-    text-align: center;
-    border: 2px solid;
-    margin: 10px;
-    padding: 10px;
-    width: 120px;
-    height: 100px;
-    background-color: white;
+.profile-image {
+  background: rebeccapurple;
+  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
 }
 
-a{
-    color: blue;
-    font-size: 20px;
+.logo {
+  color: rebeccapurple;
+  font-size: 32px;
+  font-weight: 900;
+  font-style: italic;
+}
+
+button {
+  border: none;
+  border-radius: 8px;
+  background: rebeccapurple;
+  color: white;
+  padding: 8px 24px;
+}
+
+a {
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: rebeccapurple;
+}
+
+ul {
+  list-style-type: none;
 }
