--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
+/* this is some magical font-importing.  
+you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
+
+.split{
+    border: 2px solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   margin-right: auto;
+    text-align: center;
+    
+}
+
+.split2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+}
 
 body {
   margin: 0;
@@ -10,6 +29,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-around;
 }
 
 .profile-image {
@@ -25,6 +46,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin: 5px;
+  padding: 5px;
 }
 
 button {
@@ -32,15 +55,21 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  margin-right: 20px;
+  padding: 12px;
+  height: 35px;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin: 5px;
+  padding: 15px;
+  
 }
 
 ul {
+    text-align-last: center;
   list-style-type: none;
 }
