--- a/style.css
+++ b/style.css
@@ -1,56 +1,92 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+html, body {
+  height: 100%;
+}
+
 body {
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
-  img {
-    width: 100px;
-    height: 100px;
-  }
-  header{
-    display: flex;
-    justify-content: center;
-  }
-  
-  .title {
-    font-size: 36px;
-    font-weight: 900;
-  }
-
-  .container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap:32px ;
-    text-align: center;
-    height: 250px;
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  background: #aaa;
+  color: #333;
+  /* I'll give you this one for free lol */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-  
-  
-  .cards{
-    width: 250px;
-    height: 200px;
-  }
 
-  .card-image{
-    height:100px ;
-    width: 100px;
-  }
-
-  p{
-    text-align: center;
-    width: 150px;
-    height: 100px;
-    border-radius: 5px;
+.modal {
+  background: white;
+  width: 480px;
+  border-radius: 10px;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 }
-  /* do not edit this footer */
-  .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 52px;
+.control{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #eee;
-  }
+    justify-content: space-between;
+    margin-top: 10px;
+    padding: 10px;
+}
+.textbox{
+    margin-top: 15px;
+    margin-left: 60px;
+    margin-bottom: 20px;
+}
+.icon {
+    float: left;
+  color: royalblue;
+  font-size: 26px;
+  font-weight: 700;
+  background: lavender;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+
+.close-button {
+    float: right;
+  background: #eee;
+  border-radius: 50%;
+  color: #888;
+  font-weight: 400;
+  font-size: 16px;
+  height: 24px;
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+button.continue {
+  background: royalblue;
+  border: 1px solid royalblue;
+  color: white;
+}
+
+button.cancel {
+  background: white;
+  border: 1px solid #ddd;
+  color: royalblue;
+}
+.header{
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-align: center;
+    text-align: left;
+    margin-bottom: 10px;
+}
+.btnbox{
+    margin-left: 60px;
+    margin-bottom: 10px;
+}
