Changed Footer Background

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ input {
     display: flex;
     justify-content: space-between;
 }
-.footer{
+.footer{ background-color:lightgray;
     margin-top: 300px;
     display:flex;
     justify-content: space-between;
