--- a/style.css
+++ b/style.css
@@ -1,67 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+html, body{
+    height: 100px;
+}
 
 body {
-    display: column;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
     min-height: 100vh;
-  height: 100vh;
-  margin: 0;
-  overflow: hidden;
-  font-family: Roboto, sans-serif;
-}
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .header {
+    height: 72px;
+    background: darkmagenta;
+    color: white;
+    font-size: 1.8rem;
+    font-weight: bold;
+    padding: 10px;
+    display: flex;
 
-img {
-  width: 600px;
-}
-ul {
-    list-style-type: none;
-    margin: 10px;
-    padding: 0;
-}
-ul > li{
-    display: inline;
-    padding: 20px;
-}
-li > a{
-    color: black;
-}
-.buttons{
+  }
+  
+  .footer {
+    margin: 0px;
     display: flex;
     justify-content: center;
-}
-
-button {
-    
-    font-family: Roboto, sans-serif;
-    border: none;
-    border-radius: 8px;
-    background: #eee;
-  
-}
-
-input {
-  border: 1px solid #ddd;
-  border-radius: 16px;
-  padding: 8px 24px;
-  width: 400px;
-  margin-bottom: 16px;
-  
-}
-.header{
-    display: flex;
-    justify-content: space-between;
-}
-.footer{ background-color:lightgray;
-    margin-top: 300px;
-    display:flex;
-    justify-content: space-between;
-}
-.content{
-    display: flex;
-    justify-content: center;
-    height: px;
     align-items: center;
-}
-.input{
+    background: lightgray;
+    color: darkmagenta;
+    padding: 20px;
+
+  }
+  
+  .sidebar { 
+    float: left;
+    padding: 0px;
+    margin: 0px;
+    width: 170px;
+    background: royalblue;
+    height: 100%;
+    min-height: 100vh;
+
+  }
+  .cardbox{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+
+  }
+  .card {
+    margin: 0px;
+    padding: 10px;
+    width: 300px;
+    height: 300px;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+    
+  }
+
+li{
+    list-style-type: none;
+    padding: 5px;
+    
+
 }
+ li > a{
+    color: white; 
+    list-style-type: none;
+    text-decoration:none;
+ }
